# Gadfly

./: .gitignore  README.md  gadfly.toml  pyproject.toml  spec.md
.github/workflows/: publish.yml
gadfly/: __init__.py  cli.py  config.py  context.py  contracts.py  core.py  factory.py  feedback.py  router.py  supervisors.py  worker.py
gadfly/adapters/claudecode/: batch.py  install.py  normalize.py  transcript.py  verdict.py
gadfly/adapters/claudecode/hooks/: posttooluse.py  pretooluse.py  sessionstart.py  stop.py  userpromptsubmit.py
gadfly/prompts/: architect.md  architect_modes.md  architect_solo.md  code.md  code_solo.md  compaction.md  digest.md
gadfly/providers/: anthropic_api.py  llm.py
gadfly/state/: codemap.py  compaction.py  corrections.py  decisions.py  digest.py  edits.py  learned.py  memory.py  session.py
prompts/: architect.md  architect_modes.md  architect_solo.md  code.md  code_solo.md  digest.md  extractor.md  midwife.md  triage.md
tests/: test_anthropic_api.py  test_batch.py  test_claudecode_normalize.py  test_claudecode_transcript.py  test_claudecode_verdict.py  test_cli.py  test_codemap.py  test_compaction.py  test_config.py  test_contracts.py  test_core.py  test_decision_recording.py  test_decisions.py  test_digest.py  test_factory.py  test_feedback.py  test_gate_clamp.py  test_install.py  test_learned.py  test_llm.py  test_memory.py  test_router.py  test_session.py  test_supervisors.py  test_worker.py
